feat: Parallel Processing